--- a/app/templates/dashboard/overview.html
+++ b/app/templates/dashboard/overview.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard/base.html' %}
+<!-- FIXED: Updated url_for() endpoints to match admin Blueprint -->
 {% set active_page = 'dashboard' %}
 {% block title %}Dashboard Overview | Elite Admin Console{% endblock %}
 
